# Dev-Hub

./: .gitignore  README.md  docker-compose.yml  start_all.ps1  test_db.py  test_users.py
Context/: session_context.md  universal_dev_hub_architecture.md  universal_dev_hub_brainstorming.md  universal_dev_hub_prd.md  universal_dev_hub_sdd.md
Walkthrough/: implementation_plan_phase0_V00.md  implementation_plan_phase1_V00.md  implementation_plan_phase2_V00.md  implementation_plan_phase3_V00.md  implementation_plan_phase3_V01.md  implementation_plan_phase4_V00.md  implementation_plan_phase5_V00.md  implementation_plan_phase6_V00.md  project_presentation.md  task.md  walkthrough_phase0_V00.md  walkthrough_phase4_V00.md
backend/bff/: dependencies.py  main.py  requirements.txt  test_bff.py
backend/bff/routers/: __init__.py  analytics.py  auth.py  files.py  scripts.py
backend/services/analytics/: database.py  main.py  models.py  requirements.txt  schemas.py
backend/services/automation_worker/: alembic.ini  database.py  main.py  models.py  requirements.txt  schemas.py
backend/services/blob_service/: alembic.ini  database.py  main.py  minio_client.py  models.py  requirements.txt  schemas.py
backend/services/identity/: alembic.ini  database.py  main.py  (+3 more)
backend/shared/: pyproject.toml
backend/shared/devhub_shared/: __init__.py
backend/shared/devhub_shared/auth/: __init__.py  jwt_handler.py
backend/shared/devhub_shared/logging/: __init__.py  logger.py
backend/shared/devhub_shared/models/: __init__.py  base.py
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts  theme.ts
protos/: snippet.proto
scripts/: dev-start.ps1  init-db.sql
(+38 files in other folders)
